# Souli_RAG

./: README.md
rag-agent/: agent.py  pyproject.toml  test_rag.py
rag-agent/chroma_db/: chroma.sqlite3
rag-agent/data/: docs.txt
rag-agent/rag/: chain.py  ingest.py
